@@ -1,5 +1,7 @@
 package de.bxservice.omnisearch.tools;
 
+import java.lang.reflect.InvocationTargetException;
+
 import org.adempiere.base.Service;
 import org.adempiere.base.ServiceQuery;
 import org.adempiere.exceptions.AdempiereException;
@@ -22,8 +24,10 @@ public class OmnisearchDocumentFactory extends OmnisearchAbstractFactory {
 		if (custom == null)
 			throw new AdempiereException("No OmnisearchDocument provider found for documentType " + documentType);
 		try {
-			return custom.getClass().newInstance();
-		} catch (InstantiationException | IllegalAccessException e) {}
+			return custom.getClass().getConstructor().newInstance();
+		} catch (InstantiationException | IllegalAccessException |
+				IllegalArgumentException | InvocationTargetException |
+				NoSuchMethodException | SecurityException e) {}
 		
 		return null;
 	}
